some stuff cant remember exactly

--- a/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/style.css
+++ b/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/style.css
@@ -38,14 +38,14 @@ h4{
 	white-space: nowrap;
 }
 
-main{
+.playlist{
 	float: left;
 	width: 50%;
 	position: relative;
 }
 
 
-nav {
+.recommendations{
 	float: right;
 	width: 50%;
 	position: relative;
